# Nezu

./: $test.ps1  $vminor.ps1  $vpatch.ps1  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  TODO.md  manual_tests.ps1  nezu.json  nezu.py  pyproject.toml  test_example.py  test_hide.py  test_nez.py  test_parsing.py  test_simple.py  ztest_example.py  ztest_hide.py  ztest_parsing.py
nezu/: README.md  TODO.md  __init__.py  _os_env.py  _parse.py  nezu.json  nezu.py  pyproject.toml
nezu/manual_tests/: __init__.py  bps.py  example.py  multiline.py  ztest_example.py  ztest_hide.py  ztest_multiline.py  ztest_nez.py  ztest_parsing.py  ztest_say.py  ztest_say_color.py  ztest_simple.py
nezu/parts/: cli.py  parser.py
nezu/test/: test_config.py  test_say.py
nezu/tests/: test_class.py  test_config.py  test_dbg.py  test_line_checker.py  test_say.py
nezu_parts/: config.py
patchlog/: v0.5.md  v0.6.md
test/: test_config.py  test_line_checker.py  test_say.py
