[tool.poetry]
name = "nezu"
version = "0.3.4"
description = "Elegant debuging module"
authors = ["Chuck Cartwright"]
license = "GPL-3.0"
readme = "README.md"

# Only Uses Python Standard Library!
[tool.poetry.dependencies]
python = "^3.11"

# Blue formatter is like Black but with single quotes.
[tool.poetry.group.dev.dependencies]
blue = "0.9.1"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nezu = "nezu:main_function"
